# homeassistant-rental-control

./: .editorconfig  .gitattributes  .gitignore  .gitlint  .grype.yaml  .pre-commit-ci.yaml  .pre-commit-config.yaml  .yamllint  AGENTS.md  IMPLEMENTATION_SUMMARY.md  README.md  REUSE.toml  UV_USAGE.md  hacs.json  info.md  mypy.ini  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_test.txt  setup.cfg
.aislop/: baseline.json  config.yml
.github/: dependabot.yml  release-drafter.yml
.github/agents/: copilot-instructions.md  speckit.plan.agent.md  speckit.specify.agent.md  speckit.tasks.agent.md
.github/codeql/: codeql-config.yml
.github/workflows/: autolabeler.yaml  build-test.yaml  codeql-analysis.yaml  codeql.yml  gitlint.yaml  hacs.yaml  hassfest.yaml  openssf-scorecard.yaml  release-drafter.yaml  release.yaml  semantic-pull-request.yaml  validate.yaml
.reuse/: dep5
.specify/memory/: constitution.md
code-reviews/: 20260310-rc_review.md
custom_components/: __init__.py
custom_components/rental_control/: __init__.py  calendar.py  config_flow.py  const.py  coordinator.py  description_parser.py  event_overrides.py  helpers.py  keymaster_service_helpers.py  keymaster_services.py  listeners.py  manifest.json  manifest.json.license  migrations.py  reconciliation.py  sensor.py  services.py  services.yaml  startup_readability.py  state_handlers.py  strings.json  switch.py  util.py
specs/001-static-random-uid-seed/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-test-coverage/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-code-health/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-coordinator-migration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-checkin-tracking/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-fix-duplicate-slot/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-child-lock-monitoring/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-static-random-uid-seed/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-honor-pms-times/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-trim-event-names/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-lock-code-buffer/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/010-explicit-entry-guards/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/011-decompose-init/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/012-slot-reconciliation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/013-stateless-reconciliation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
tests/: __init__.py  conftest.py
(+221 files in other folders)
