# SPDX-FileCopyrightText: 2021 Andrew Grimberg <tykeal@bardicgrove.org>
# SPDX-License-Identifier: Apache-2.0

[project]
name = "homeassistant-rental-control"
version = "0.0.0"
description = "Home Assistant integration for managing rental properties with calendar and door code management"
readme = "README.md"
requires-python = ">=3.13.2"
license = {text = "Apache-2.0"}
authors = [
    {name = "Andrew Grimberg", email = "tykeal@bardicgrove.org"}
]
keywords = ["homeassistant", "rental", "calendar", "icalendar", "keymaster"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Home Automation",
]

dependencies = [
    "icalendar>=6.1.0",
    "x-wr-timezone>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "homeassistant>=2025.8.0",
]

test = [
    "homeassistant>=2025.8.0",
    "pytest-homeassistant-custom-component",
]

[project.urls]
Homepage = "https://github.com/tykeal/homeassistant-rental-control"
Documentation = "https://github.com/tykeal/homeassistant-rental-control"
Repository = "https://github.com/tykeal/homeassistant-rental-control"
Issues = "https://github.com/tykeal/homeassistant-rental-control/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["custom_components"]

[dependency-groups]
dev = [
    "homeassistant>=2025.8.0",
]

[tool.pytest.ini_options]
addopts = "-qq"
console_output_style = "count"
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
branch = false
source = ["custom_components.rental_control"]

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.mypy]
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["homeassistant.*", "voluptuous.*", "icalendar.*", "x_wr_timezone.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501", # line too long (handled by formatter)
    "E203", # whitespace before ':'
]

[tool.ruff.lint.isort]
force-single-line = true
force-sort-within-sections = true
known-first-party = ["custom_components.rental_control", "tests"]
forced-separate = ["tests"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
